--- a/App1/package.json
+++ b/App1/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --port 4000",
     "build": "ng build --output-hashing none --single-bundle true",
+    "server":"http-server ./dist/App1",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
